--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   "engines": {
     "vscode": "^1.86.0"
   },
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/vega1207/jts-snippets"
+	},
+	"bugs": {
+		"url": "https://github.com/vega1207/jts-snippets/issues"
+	},
   "categories": [
     "Snippets"
   ],
